--- a/fileing/index.css
+++ b/fileing/index.css
@@ -174,3 +174,8 @@ footer {
     .product-list { flex-direction: column; align-items: center; }
     .products { padding: 1rem; }
 }
+
+.logo {
+    height: 50px;
+    width: 50px;
+}
